--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -16,6 +16,9 @@ baseurl = "https://ee-jackson.netlify.app/"
 # To display a copyright symbol, type `&copy;`. For current year, type `{year}`.
 copyright = ""
 
+# Enable analytics by entering your Google Analytics tracking ID
+googleAnalytics = "UA-53253018-2"
+
 ############################
 ## Advanced options below ##
 ############################
