--- a/data/themes/custom2.toml
+++ b/data/themes/custom2.toml
@@ -10,7 +10,7 @@ primary = "#036C34"
 # Menu
 menu_primary = "#fff"
 menu_text = "#34495e"
-menu_text_active = "#02361A"
+menu_text_active = "#036C34"
 menu_title = "#2b2b2b"
 
 # Home sections
