--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -3,25 +3,30 @@
 #     desired widget in your `content/home/` folder.
 #   The weight parameter defines the order that the links will appear in.
 
+# [[main]]
+#   name = "Home"
+#   url = "#home"
+#   weight = 10
+
 [[main]]
-  name = "Home"
-  url = "#about"
-  weight = 10
+  name = "About"
+  url = "/about"
+  weight = 15
 
 [[main]]
   name = "Projects"
-  url = "#projects"
+  url = "/projects"
   weight = 20
 
 [[main]]
-  name = "Posts"
-  url = "#posts"
-  weight = 30
+  name = "Publications"
+  url = "/publication"
+  weight = 40
 
 [[main]]
-  name = "Publications"
-  url = "#publications"
-  weight = 40
+  name = "Blog"
+  url = "/blog"
+  weight = 50
 
 # [[main]]
 #   name = "Contact"
