update custom theme
new background colour

--- a/data/themes/custom2.toml
+++ b/data/themes/custom2.toml
@@ -8,11 +8,12 @@ light = true
 primary = "#036C34"
 
 # Menu
-menu_primary = "#fff"
+menu_primary = "#F7F7F7"
 menu_text = "#34495e"
 menu_text_active = "#036C34"
 menu_title = "#2b2b2b"
 
 # Home sections
-home_section_odd = "rgb(255, 255, 255)"
-home_section_even = "rgb(247, 247, 247)"
+home_section_odd = "#F7F7F7"
+home_section_even = "#F7F7F7"
+background = "#F7F7F7"
