--- a/config.toml
+++ b/config.toml
@@ -6,11 +6,11 @@
 # Each configuration section is defined by a name in square brackets (e.g. `[outputs]`).
 
 # Title of your site
-title = "Eleanor Jackson"
+title = "Eleanor"
 
 # The URL of your site.
 # End your URL with a `/` trailing slash, e.g. `https://example.com/`.
-baseurl = "https://www.eleanor-jackson.com"
+baseurl = "https://www.eleanor-jackson.com/"
 
 # Enter a copyright notice to display in the site footer.
 # To display a copyright symbol, type `&copy;`. For current year, type `{year}`.
@@ -47,6 +47,7 @@ ignoreFiles = ["\\.ipynb$", ".ipynb_checkpoints$", "\\.Rmd$", "\\.Rmarkdown$", "
   tags = "/tag/:slug/"
   categories = "/category/:slug/"
   publication_types = "/publication-type/:slug/"
+  post = "/blog/:slug"
 
 [outputs]
   home = [ "HTML", "RSS", "JSON", "WebAppManifest" ]
