--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -9,22 +9,22 @@
 #   weight = 10
 
 [[main]]
-  name = "About"
+  name = "about"
   url = "/about"
   weight = 15
 
 [[main]]
-  name = "Projects"
+  name = "projects"
   url = "/projects"
   weight = 20
 
 [[main]]
-  name = "Publications"
+  name = "publications"
   url = "/publication"
   weight = 40
 
 [[main]]
-  name = "Blog"
+  name = "blog"
   url = "/post"
   weight = 50
 
