--- a/data/fonts/my_font.toml
+++ b/data/fonts/my_font.toml
@@ -2,7 +2,8 @@
 name = "my_font"
 
 # Optional Google font URL
-google_fonts = "Cutive+Mono|IBM+Plex+Mono:400i,500i|Roboto:400,700"
+google_fonts = ""
+#google_fonts = "Roboto+Mono|IBM+Plex+Mono:400italic,500italic|Roboto:400"
 
 # Font families
 heading_font = "IBM Plex Mono"
