--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -112,7 +112,7 @@ appointment_url = ""
 # Contact links
 #   Set to `[]` to disable, or comment out unwanted lines with a hash `#`.
 contact_links = [
-  {icon = "twitter", icon_pack = "fab", name = "DM me", link = "https://twitter.com/EE_Jackson"},
+  {icon = "twitter", icon_pack = "fab", name = "DM me", link = "https://twitter.com/ee_jackson"},
   ]
 
 ############################
@@ -123,7 +123,7 @@ contact_links = [
 sharing_image = ""
 
 # Twitter username (without @). Used when a visitor shares your site on Twitter.
-twitter = "EE_Jackson"
+twitter = "ee_jackson"
 
 ############################
 ## Regional Settings
